--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-03 11:18:10
+lastsearch = 2024-08-03 11:57:24
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = 11.1%%
-title = CHỢ ĐỒ CŨ ĐÀI LOAN
-url = https://www.facebook.com/groups/2967174413509226/
+match = -28.6%%
+title = Hội Người Việt Nam ở Chiayi ( Gia Nghĩa ) 嘉義
+url = https://www.facebook.com/groups/3429405850654432/posts/-đèn-led-phi-hành-gia-chiếu-thiên-hà-bầu-trời-sao-đổi-màu-dùng-cho-phòng-ngủ-và-/3696627640598917/
 
 [nhua66a.com]
 match = -17.9%%
