--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-03 09:03:22
+lastsearch = 2024-08-03 11:45:27
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Mô hình nuôi gà vi sinh: Thịt thơm ngon, gà sạch bệnh | VTC1
 url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fizbzz0&sig=ACfU3U1PWGxspr6U63iLMsf833sH0aP3CA&hl=en&sa=X&ved=2ahUKEwi2z6GyhNeHAxVeGTQIHc7DBf0Q6AF6BAgZEAM
+match = -250.0%%
+title = Ngô Thì Nhậm, tác phẩm - Volume 1 - Page 83 - Google Books Result
+url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSWHkYZ9h&sig=ACfU3U3OTmyypj3XeMhh0_wEM508NdLzBg&hl=en&sa=X&ved=2ahUKEwjv9vnmgdiHAxWdrokEHQUjGdEQ6AF6BAgaEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
