--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-03 10:55:12
+lastsearch = 2024-08-03 11:57:47
 
 [www.everonvn.vn]
-match = 66.7%%
-title = Ruột gối Everon 45 x 65
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
+match = -52.4%%
+title = Ruột gối Everon 3D Mesh thiết kế dạng lưới ...
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-3d-mesh.html
 
 [shopee.vn]
-match = -81.0%%
-title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
-url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
+match = -85.7%%
+title = Ruột gối Everon siêu êm Classic Soft 45x65 (Độ cao: 16cm)
+url = https://shopee.vn/Ruột-gối-Everon-siêu-êm-Classic-Soft-45x65-(Độ-cao-16cm)-i.34660875.10533606712
 
 [www.diepxuan.com]
-match = 4.8%%
-title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html
+match = 42.9%%
+title = Ruột gối kê hoa 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 
 [elambo.vn]
 match = -90.5%%
@@ -39,7 +39,7 @@ url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-k
 [demxanh.com]
 match = -81.0%%
 title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
-url = https://demxanh.com/ruot-goi-kim-cuong.html?srsltid=AfmBOoofkLJghP4jABajPAMmNAnDXPPVk-Jf9ZUdGqDqryQ8hrFZWl1v
+url = https://demxanh.com/ruot-goi-kim-cuong.html
 
 [demhong.vn]
 match = -33.3%%
@@ -65,4 +65,24 @@ url = https://sieuthinguyenkim.com/combo-2-ruot-goi-hoa-hut-chan-nti112566557.ht
 match = 19.0%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ
 url = https://www.everonqb.com/ruot-goi-ke-everon-45x65-thu-gian-co.html
+
+[foreverbedding.net]
+match = -95.2%%
+title = Ruột gối nằm HQ chống trượt kháng hơi - Forever Bedding
+url = https://foreverbedding.net/ruot-goi-nam-hq-chong-truot-khang-hoi
+
+[antbedding.com]
+match = 42.9%%
+title = Ruột Gối Bông Lông Vũ
+url = https://antbedding.com/ruot-goi-bong-long-vu
+
+[changagoidemsonghong.online]
+match = -23.8%%
+title = Ruột gối đầu Sông Hồng giá rẻ tại Hà Nội
+url = https://changagoidemsonghong.online/ruot-goi-dau-song-hong.html
+
+[everonhanquoc.vn]
+match = 0.0%%
+title = 
+url = https://everonhanquoc.vn/everon/1508/ruot-goi-mong-everon
 
