--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -227,9 +227,9 @@ title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - fkik433.com
 url = https://fkik433.com/product/lrrxzabx-255/
 
 [fowm924.com]
-match = -193.8%%
-title = tui warmdream 16 - The third continent / Wings of Fire Book 16
-url = https://fowm924.com/blog/vljjrwrj-233/
+match = -218.8%%
+title = tui warmdream 16 - The third continent / Wings of Fire Book 16 ...
+url = https://fowm924.com/bag/lrrxzabx-255/
 
 [www.pmoq458.com]
 match = -118.8%%
