--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-03 10:22:31
+lastsearch = 2024-08-03 13:44:42
 
 [shopee.vn]
 match = -65.2%%
@@ -74,7 +74,7 @@ url = https://h5.lazada.vn/products/freeship-max-ma-giam-gia-chieu-nhua-thai-bin
 [m.facebook.com]
 match = 85.0%%
 title = Chiếu nhựa Thái Bình
-url = https://m.facebook.com/100083672378137
+url = https://m.facebook.com/p/Chiếu-nhựa-Thái-Bình-100083672378137/
 
 [chieu.com.vn]
 match = -117.4%%
