--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-03 03:47:12
+lastsearch = 2024-08-03 13:47:49
 
 [noithathomy.com]
 match = -42.9%%
@@ -12,14 +12,14 @@ title = Thảm nỉ Bali 2m x 3m TNHM02 | Hàng nhâp khẩu
 url = https://noithathomy.com/san-pham/tham-ni-bali-2m-x-3m-tnhm02/
 
 [shopee.vn]
-match = -100.0%%
-title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
-url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
+match = -81.0%%
+title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
+url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = 23.8%%
-title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
+match = -104.8%%
+title = ( TẶNG THẢM CHÂN ) Thảm nỉ trải sàn phòng khách [ 2m x ...
+url = https://www.lazada.vn/products/tang-tham-chan-tham-ni-trai-san-phong-khach-2m-x-3m-va-2m3-x-16m-tham-bali-sang-trong-hon-tham-long-tham-trai-san-balitham-trang-tri-phong-nguphong-khach-da-dang-mau-mahang-san-tham-ni-i408728790.html
 
 [tiki.vn]
 match = -9.5%%
