--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-03 10:16:17
+lastsearch = 2024-08-03 13:45:03
 
 [www.tui.co.uk]
-match = 6.7%%
-title = Flight Timetable
-url = https://www.tui.co.uk/flight/timetable
+match = -153.3%%
+title = Where We Fly | Flights with TUI 2024 / ...
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [cruisepanda.com]
 match = -213.3%%
