--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-03 15:46:31
+lastsearch = 2024-08-03 17:39:10
 
 [shopee.vn]
 match = 35.3%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 38.2%%
 title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html?srsltid=AfmBOoroxak0DUylAvHJfWB2XQR_ZmIEnolsx226xUp6PF1QxjYMP-JU
 
 [giadunganhvan.vn]
 match = 48.0%%
@@ -84,7 +84,7 @@ url = https://tiki.vn/search?q=chiếu điều hòa cao su non
 [vtvhyundai.vn]
 match = 14.7%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOooE2z1hSuiYskZ_YMvs-yiZuuxbdAFymecNFVi56e6_aWw3RAxE
 
 [ru9.vn]
 match = 8.8%%
