--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-08-03 16:50:41
+lastsearch = 2024-08-03 17:43:16
 
 [shopee.vn]
 match = -104.5%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/61553157173242/
 [www.lazada.vn]
 match = -86.4%%
 title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html?srsltid=AfmBOoqL0mYNTviE0yUsZHpT5y83BN3eZtJFNnJXHJr-2X7BMiX0Jt4G
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [tiki.vn]
 match = -86.4%%
@@ -39,7 +39,7 @@ url = https://www.auto365thaibinh.vn/
 [proauto.vn]
 match = -77.3%%
 title = Dán Phim Cách Nhiệt 3M Thái Bình Cho Xe Hơi Chính Hãng
-url = https://proauto.vn/dan-phim-cach-nhiet-3m-thai-binh-cho-xe-hoi-chinh-hang.html?srsltid=AfmBOopVELg2YrDY9KlgiqF01WR-bsc1OejNhm_h7F0rbWYmxvxz765i
+url = https://proauto.vn/dan-phim-cach-nhiet-3m-thai-binh-cho-xe-hoi-chinh-hang.html
 
 [auto365thaibinh.vn]
 match = -27.3%%
