--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-03 16:33:31
+lastsearch = 2024-08-03 17:47:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -146.7%%
-title = BRGMart - ☀️𝗛𝗘̣̂ 𝗧𝗛𝗢̂́𝗡𝗚 𝗕𝗔́𝗡 𝗟𝗘̉ 𝗕𝗥𝗚 𝗥𝗘𝗧𝗔𝗜𝗟 - ...
-url = https://www.facebook.com/photo.php?fbid=2221498034823753&id=1515183965455167&set=a.1547878702185693
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -97,9 +97,9 @@ title = D2 - Phát Triển Người Lãnh Đạo - Mục Sư Brian Houston
 url = https://quangharvest.com/isom-khoa-cap-4/d2-phat-trien-nguoi-lanh-dao-developing-leaders
 
 [www.youtube.com]
-match = -220.0%%
-title = Tận 15 năm chơi game tôi mới biết Assassin đã như vậy ...
-url = https://www.youtube.com/watch?v=xrU9hh7M6js
+match = -186.7%%
+title = TỔNG HỢP 15 MÓN NGON “ĐỨNG ĐẦU” CÁC QUẬN Ở SÀI ...
+url = https://www.youtube.com/watch?v=azJaFE1_w_k
 
 [rentapartment.vn]
 match = -153.3%%
