--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-03 16:36:53
+lastsearch = 2024-08-03 17:33:40
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
-match = -35.0%%
-title = chiếu nhựa giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu nhựa
+match = -85.0%%
+title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
+url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
 
 [tchome.vn]
 match = 20.0%%
@@ -42,9 +42,9 @@ title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
 url = https://www.sendo.vn/chieu-nhua.htm
 
 [www.facebook.com]
-match = 30.0%%
-title = Công ty Nhựa Hoàng Minh
-url = https://www.facebook.com/nhuahoangminh/posts/thông-báo-chuyển-địa-điểm-kho-lời-đầu-tiên-nhựa-hoàng-minh-chân-thành-cảm-ơn-quý/859884519276637/
+match = -5.0%%
+title = Bà Thu - Chiếu Thái Lan | Hanoi
+url = https://www.facebook.com/sanhmua.shop/?locale=vi_VN
 
 [thitruongsi.com]
 match = -90.0%%
