--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-03 17:29:01
+lastsearch = 2024-08-03 18:25:13
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -47,9 +47,9 @@ title = THỜI GIAN NHẬN TRẢ HỒ SƠ
 url = https://www.roc-taiwan.org/vnsgn_vi/post/74.html
 
 [www.facebook.com]
-match = -9.5%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -23.8%%
+title = Raohe Ẩm Thực Đài | Ho Chi Minh City
+url = https://www.facebook.com/RaoheAmThucDai/
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -57,9 +57,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [vi.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://vi.wikipedia.org/wiki/Lịch_Dân_quốc
+match = -14.3%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [trithucvn.co]
 match = -123.8%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -114.3%%
-title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
-url = https://visana.vn/visa-dai-loan/
+match = -119.0%%
+title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
+url = https://visana.vn/visa-quan-hong-dai-loan/
 
 [www.tiktok.com]
 match = -19.0%%
