--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-03 17:34:41
+lastsearch = 2024-08-03 18:28:40
 
 [demxanh.com]
 match = -18.5%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOopAcvobI0NZ8T6XBBOPIIo7mF7cL0zROPGA5jYUaOIKR3eW5cf9
 
 [demre.com.vn]
 match = 66.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 55.6%%
-title = Chiếu trúc Thái đen 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
+match = 63.0%%
+title = Điệp Xuân Chiếu trúc Thái đen 160x200
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOoq_3TEgXwtJtIQnKCDvi-Vr9Yad3gUW-UgjVZaWUYk2w2zvQbQI
 
 [shopee.vn]
 match = -18.5%%
