--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-03 17:38:08
+lastsearch = 2024-08-03 18:31:04
 
 [www.bible.com]
-match = -121.4%%
-title = ROM 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/ROM.16.MIZCLBSI
+match = -157.1%%
+title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
+url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -135.7%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
 match = -228.6%%
@@ -157,9 +157,9 @@ title = NO. 16 - Institute for the Study of Ancient Cultures
 url = https://isac.uchicago.edu/sites/default/files/uploads/shared/docs/as16.pdf
 
 [www.bing.com]
-match = -92.9%%
-title = Translate from English to Hmong Daw
-url = http://www.bing.com/translator?from=en&to=mww
+match = -175.0%%
+title = Bing
+url = http://www.bing.com/
 
 [thuedochoi.com]
 match = -107.1%%
