--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-03 15:22:37
+lastsearch = 2024-08-03 18:27:18
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 11.1%%
-title = Marina Sirota, PhD
-url = https://profiles.ucsf.edu/marina.sirota
+match = 5.0%%
+title = Steve Braunstein, MD, PhD
+url = https://profiles.ucsf.edu/steve.braunstein
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -197,8 +197,8 @@ title = Christopher Copperwheat
 url = https://www.ljmu.ac.uk/about-us/staff-profiles/faculty-of-engineering-and-technology/astrophysics-research-institute/christopher-copperwheat
 
 [cps-vo.org]
-match = -190.0%%
-title = *** 276 Total Attendees (listed in green) *** | Cyber-Physical ...
+match = -150.0%%
+title = *** 276 Total Attendees (listed in green) *** | Cyber- ...
 url = https://cps-vo.org/cps-pimtg24/registrants-attendees
 
 [www.va.gov]
