--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-03 11:57:47
+lastsearch = 2024-08-03 19:22:05
 
 [www.everonvn.vn]
 match = -52.4%%
@@ -12,14 +12,14 @@ title = Ruột gối Everon 3D Mesh thiết kế dạng lưới ...
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-3d-mesh.html
 
 [shopee.vn]
-match = -85.7%%
-title = Ruột gối Everon siêu êm Classic Soft 45x65 (Độ cao: 16cm)
-url = https://shopee.vn/Ruột-gối-Everon-siêu-êm-Classic-Soft-45x65-(Độ-cao-16cm)-i.34660875.10533606712
+match = -81.0%%
+title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
+url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Ruột gối kê hoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
+url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html?srsltid=AfmBOopzRnyKt8hARvQil1G4irzJjcVg1FEF53cknloGPG396_fbhgv6
 
 [elambo.vn]
 match = -90.5%%
@@ -27,19 +27,19 @@ title = Bảng giá mẫu ruột gối 45x65 Elambo ưu đãi và tốt nhất
 url = https://elambo.vn/ruot-goi-45x65-cm/
 
 [suongtuyet.com]
-match = -38.1%%
-title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
-url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
+match = -33.3%%
+title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
+url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
 
 [www.lazada.vn]
 match = -85.7%%
 title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước 45x65
-url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html
+url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html?srsltid=AfmBOop6rQldRlKBUWZU79h2j31XtcsIUsVJkor_tnTQHQLdew5U3ZsQ
 
 [demxanh.com]
 match = -81.0%%
 title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
-url = https://demxanh.com/ruot-goi-kim-cuong.html
+url = https://demxanh.com/ruot-goi-kim-cuong.html?srsltid=AfmBOorxvFsQ_DLP0QSW6BzCrfw_zxJ_ReSUXOBcBAP8_DMn510yYHTw
 
 [demhong.vn]
 match = -33.3%%
