--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-03 17:18:44
+lastsearch = 2024-08-03 19:20:44
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
 match = 8.0%%
@@ -17,9 +17,9 @@ title = Đệm bông ép 3 mảnh Korea Kaki
 url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOorv28uwIp8lOcMfNnmyd3zg0BUxkQ_ph3kqkM_COvQyC92Uz-z5
+match = -72.0%%
+title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
+url = https://demxanh.com/dem-bong-ep-tuan-anh.html
 
 [shopee.vn]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOoqNb3VMdGLrAyBLtAZqq3bzf-g203t4rzV1drw93C6xnprTv5UK
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [bedding.vn]
 match = -76.0%%
